--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-user-header></app-user-header>
+<!-- <app-user-header></app-user-header> -->
+<app-admin-menu></app-admin-menu>
 
 <router-outlet></router-outlet>
 
-<app-user-footer></app-user-footer>
+<!-- <app-user-footer></app-user-footer> -->
