--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 .slick-slider {
-    width: 88%;
     margin: auto;
-    background: rgb(14, 13, 13);
   }
   
 body .slick-prev, 
 body .slick-next {
     height: 45px;
     width: 40px;
-    background: grey !important;
+    background: #eaedea !important;
+    border-radius: 5px;
     z-index: 100;
 }
