--- a/src/app/admin/users/list-user/list-user.component.html
+++ b/src/app/admin/users/list-user/list-user.component.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="card-body flex-column"> 
-                <table datatable [dtOptions]="dtOptions" class="table table-bordered table-striped mt-3"
+                <table class="table table-bordered table-striped mt-3"
                 id="datatableexample">
                     <thead>
                         <tr>
