--- a/src/app/admin/category/edit-cate/edit-cate.component.html
+++ b/src/app/admin/category/edit-cate/edit-cate.component.html
@@ -28,14 +28,14 @@
             <div class="card-header d-flex justify-content-between">
                 <h5 class="h5-title" style="margin: 8px 20px;">Cập nhật danh mục sản phẩm</h5>
                 <div class="button" style="margin: 8px 20px;">
-                    <a href="" class="btn btn-primary btn-sm mr-2" style="padding: 4px 8px;">
+                    <button type="submit" class="btn btn-primary btn-sm mr-2" style="padding: 4px 8px;" (click)="onSubmit()">
                         <svg xmlns="http://www.w3.org/2000/svg" style="fill: #fff" height="1em" viewBox="0 0 448 512">
                             <path
                                 d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V173.3c0-17-6.7-33.3-18.7-45.3L352 50.7C340 38.7 323.7 32 306.7 32H64zm0 96c0-17.7 14.3-32 32-32H288c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V128zM224 288a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
                         </svg>
                         Lưu
-                    </a>
-                    <a href="/admin/category/index" class="btn btn-danger btn-sm" style="padding: 4px 8px;">
+                    </button>
+                    <a routerLink="/admin/category/index" class="btn btn-danger btn-sm" style="padding: 4px 8px;">
                         <svg xmlns="http://www.w3.org/2000/svg" style="fill: #fff;" height="1em" viewBox="0 0 512 512">
                             <path
                                 d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z" />
@@ -47,25 +47,37 @@
             <div class="card-body">
                 <div class="row w-100">
                     <div class="col-md-9">
-                        <form action="" method="" (ngSubmit)="onSubmit()">
+                        <form action="" method="" [formGroup]="editCategory">
                             <div class="mb-3">
-                                <input name="" id="cateId" class="form-control" type="hidden"/>
+                                <input name="" id="cateId" formControlName="Id" class="form-control" type="hidden"/>
                             </div>
                             <div class="mb-3">
                                 <label for="" class="mb-2 font-weight-bold">Tên danh mục</label>
                                 <input name="" id="cateName" formControlName="Name" class="form-control" type="text" />
+                                <div *ngIf="submited && f.Name.errors">
+                                    <small *ngIf="f.Name.errors['required']" style="color: red;">Vui lòng nhập tên danh mục</small>
+                                </div>
                             </div>
                             <div class="mb-3">
                                 <label for="" class="mb-2 font-weight-bold">Tiêu đề SEO</label>
                                 <input name="" id="cagteMetaTitle" formControlName="MetaTitle" class="form-control" type="text" />
+                                <div *ngIf="submited && f.MetaTitle.errors">
+                                    <small *ngIf="f.MetaTitle.errors['required']" style="color: red;">Vui lòng nhập tiêu đề SEO</small>
+                                </div>
                             </div>
                             <div class="mb-3">
                                 <label for="" class="mb-2 font-weight-bold">Từ khóa SEO</label>
                                 <textarea name="" id="cateMetaKey" formControlName="MetaKey" class="form-control" type="text"></textarea>
+                                <div *ngIf="submited && f.MetaKey.errors">
+                                    <small *ngIf="f.MetaKey.errors['required']" style="color: red;">Vui lòng nhập từ khóa SEO</small>
+                                </div>
                             </div>
                             <div class="mb-3">
                                 <label for="" class="mb-2 font-weight-bold">Mô tả SEO</label>
                                 <textarea name="" id="cateMetaDesc" formControlName="MetaDesc" class="form-control" type="text"></textarea>
+                                <div *ngIf="submited && f.MetaDesc.errors">
+                                    <small *ngIf="f.MetaDesc.errors['required']" style="color: red;">Vui lòng nhập mô tả SEO</small>
+                                </div>
                             </div>
                             <div class="mb-3">
                                 <label for="" class="mb-2 font-weight-bold">Trạng thái hiển thị</label>
