--- a/src/app/admin/users/trash-user/trash-user.component.html
+++ b/src/app/admin/users/trash-user/trash-user.component.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="card-body flex-column"> 
-                <table class="table table-bordered table-striped mt-3"
+                <table datatable [dtOptions]="dtOptions" class="table table-bordered table-striped mt-3"
                 id="datatableexample">
                     <thead>
                         <tr>
