--- a/src/app/admin/category/trash-cate/trash-cate.component.html
+++ b/src/app/admin/category/trash-cate/trash-cate.component.html
@@ -28,7 +28,7 @@
             <div class="card-header d-flex justify-content-between">
                 <h5 class="h5-title" style="margin: 8px 20px;">Thùng rác</h5>
                 <div class="button" style="margin: 8px 20px;">
-                    <a routerLink="/admin/category/index" class="btn btn-danger btn-sm" style="padding: 4px 8px;">
+                    <a href="/admin/category/index" class="btn btn-danger btn-sm" style="padding: 4px 8px;">
                         <svg xmlns="http://www.w3.org/2000/svg" style="fill: #fff;" height="1em" viewBox="0 0 512 512">
                             <path
                                 d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z" />
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="card-body flex-column">
-                <table class="table table-bordered table-striped mt-3"
+                <table datatable [dtOptions]="dtOptions" class="table table-bordered table-striped mt-3"
                     id="datatableexample">
                     <thead>
                         <tr>
@@ -51,27 +51,27 @@
                     <tbody>
                         <tr *ngFor="let trashCate of listTrashCate">
                             <td>{{trashCate.id}}</td>
-                            <td>{{trashCate.name}}</td>
+                            <td><a href="./Detail.html">{{trashCate.name}}</a></td>
                             <td>{{trashCate.createdDate}}</td>
                             <td>
                                 <label class="switch">
                                     <input class="changeStatus" type="checkbox">
                                     <span class="slider round"></span>
                                 </label>
-                                <button (click)="ReTrashCategory(trashCate.id)" class="btn btn-info" style="color: #fff; margin: 0 4px; padding: 4px 8px;">
+                                <a href="" class="btn btn-info" style="color: #fff; margin: 0 4px; padding: 4px 8px;">
                                     <svg xmlns="http://www.w3.org/2000/svg" style="fill: #fff;" height="1em"
                                         viewBox="0 0 512 512">
                                         <path
                                             d="M463.5 224H472c13.3 0 24-10.7 24-24V72c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2L413.4 96.6c-87.6-86.5-228.7-86.2-315.8 1c-87.5 87.5-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3c62.2-62.2 162.7-62.5 225.3-1L327 183c-6.9 6.9-8.9 17.2-5.2 26.2s12.5 14.8 22.2 14.8H463.5z" />
                                     </svg>
-                                </button>
-                                <button (click)="delCate(trashCate.id)" class="btn btn-danger" style="color: #fff; margin: 0 4px; padding: 4px 8px;">
+                                </a>
+                                <a href="" class="btn btn-danger" style="color: #fff; margin: 0 4px; padding: 4px 8px;">
                                     <svg xmlns="http://www.w3.org/2000/svg" style="fill: #fff;" height="1em"
                                         viewBox="0 0 448 512">
                                         <path
                                             d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
                                     </svg>
-                                </button>
+                                </a>
                             </td>
                         </tr>
                     </tbody>
