--- a/src/app/admin/category/list-cate/list-cate.component.html
+++ b/src/app/admin/category/list-cate/list-cate.component.html
@@ -28,11 +28,11 @@
             <div class="card-header d-flex justify-content-between">
                 <h5 class="h5-title" style="margin: 8px 20px;">Danh mục sản phẩm</h5>
                 <div class="button" style="margin: 8px 20px;">
-                    <a routerLink="/admin/category/add" class="btn btn-primary btn-sm mr-2" style="padding: 4px 8px;">
+                    <a [routerLink]="['/admin/category/add']" class="btn btn-primary btn-sm mr-2" style="padding: 4px 8px;">
                         <i class="fa-sharp fa-solid fa-plus" style="font-size: 12px;"></i>
                         Thêm mới
                     </a>
-                    <a routerLink="/admin/category/trash" class="btn btn-danger btn-sm" style="padding: 4px 8px;">
+                    <a [routerLink]="['/admin/category/trash']" class="btn btn-danger btn-sm" style="padding: 4px 8px;">
                         <svg xmlns="http://www.w3.org/2000/svg" style="fill: #fff;" height="1em" viewBox="0 0 448 512">
                             <path
                                 d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
@@ -55,14 +55,17 @@
                     <tbody>
                         <tr *ngFor="let cate of listCate">
                             <td>{{cate.id}}</td>
-                            <td><a routerLink="/admin/category/detail/{{cate.id}}">{{cate.name}}</a></td>
+                            <td><a [routerLink]="['/admin/category/detail',cate.id]">{{cate.name}}</a></td>
                             <td>{{cate.createdDate}}</td>
                             <td>
                                 <label class="switch">
-                                    <input class="changeStatus" type="checkbox">
+                                    <input class="changeStatus" (click)="changeActive(cate.id)" type="checkbox" *ngIf="cate.isActive == 1 else falseCheck" checked>
+                                    <ng-template #falseCheck>
+                                        <input class="changeStatus" (click)="changeActive(cate.id)" type="checkbox">
+                                    </ng-template>
                                     <span class="slider round"></span>
                                 </label>
-                                <a routerLink="/admin/category/edit/{{cate.id}}" class="btn btn-warning"
+                                <a [routerLink]="['/admin/category/edit',cate.id]" class="btn btn-warning"
                                     style="color: #fff; margin: 0 4px; padding: 4px 8px;">
                                     <svg xmlns="http://www.w3.org/2000/svg" style="fill: #fff;" height="1em"
                                         viewBox="0 0 512 512">
