--- a/src/app/admin/users/list-user/list-user.component.html
+++ b/src/app/admin/users/list-user/list-user.component.html
@@ -29,11 +29,11 @@
             <div class="card-header d-flex justify-content-between">
                 <h5 class="h5-title" style="margin: 8px 20px;">Quản lý thành viên</h5>
                 <div class="button" style="margin: 8px 20px;">
-                    <a routerLink="" class="btn btn-primary btn-sm mr-2" style="padding: 4px 8px;">
+                    <a [routerLink]="['/admin/user/create']" class="btn btn-primary btn-sm mr-2" style="padding: 4px 8px;">
                         <i class="fa-sharp fa-solid fa-plus" style="font-size: 12px;"></i>
                         Thêm mới
                     </a>
-                    <a routerLink="/admin/user/trash" class="btn btn-danger btn-sm" style="padding: 4px 8px;">
+                    <a [routerLink]="['/admin/user/trash']" class="btn btn-danger btn-sm" style="padding: 4px 8px;">
                         <svg xmlns="http://www.w3.org/2000/svg" style="fill: #fff;" height="1em" viewBox="0 0 448 512">
                             <path
                                 d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
@@ -58,7 +58,7 @@
                     <tbody>
                         <tr *ngFor="let user of listUser">
                             <td>{{user.id}}</td>
-                            <td><a routerLink="">{{user.fullName}}</a></td>
+                            <td><a [routerLink]="['/admin/user/detail', user.id]">{{user.fullName}}</a></td>
                             <td>{{user.email}}</td>
                             <td>
                                 <span *ngIf="user.role == 1" style="font-size: 16px; font-style: italic; color: #000;">Quản trị viên</span>
@@ -69,7 +69,7 @@
                                 <span *ngIf="user.isActive == 0" style="font-size: 16px; color: red;">Tạm khóa</span>
                             </td>
                             <td>
-                                <a routerLink="" class="btn btn-warning" style="color: #fff; margin: 0 4px; padding: 4px 8px;">
+                                <a [routerLink]="['/admin/user/edit', user.id]" class="btn btn-warning" style="color: #fff; margin: 0 4px; padding: 4px 8px;">
                                     <svg xmlns="http://www.w3.org/2000/svg" style="fill: #fff;" height="1em"
                                         viewBox="0 0 512 512">
                                         <path
