--- a/src/app/admin/menu/menu.component.html
+++ b/src/app/admin/menu/menu.component.html
@@ -173,7 +173,7 @@
             <a [routerLink]="['/admin/user/index']"><span>Danh sách</span></a>
           </li>
           <li>
-            <a [routerLink]="['admin/user/create']"><span>Thêm mới</span></a>
+            <a [routerLink]="['/admin/user/create']"><span>Thêm mới</span></a>
           </li>
           <li>
             <a [routerLink]="['/admin/user/trash']"><span>Thùng rác</span></a>
