--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -7,17 +7,13 @@
     <div class="banner-slider">
         <ngx-slick-carousel class="carousel" 
             #slickModal="slick-carousel" 
-            [config]="slideConfigSlider" 
-            (init)="slickInit($event)"
-            (breakpoint)="breakpoint($event)"
-            (afterChange)="afterChange($event)"
-            (beforeChange)="beforeChange($event)">
+            [config]="slideConfigSlider">
             
 
             <div class="banner-item" ngxSlickItem *ngFor="let slide of slidesSlider" >
                 <img src="{{'../assets/sliders/' +slide.image }}" alt="" class="w-100">
                 <div class="banner-content">
-                    <h5>{{slide.name}}</h5>
+                    <h5 style="font-family: 'svn-0'!important; font-size: 26px;">{{slide.name}}</h5>
                     <img src="../assets/Pictures/trang-chu/tinhhoaamthuc.png" alt="" class="w-75">
                     <p style="width: 400px">
                         {{slide.description}}
@@ -39,11 +35,7 @@
             <h2>SẢN PHẨM NỔI BẬT</h2>
             <ngx-slick-carousel class="carousel" 
                 #slickModal="slick-carousel" 
-                [config]="slideConfig" 
-                (init)="slickInit($event)"
-                (breakpoint)="breakpoint($event)"
-                (afterChange)="afterChange($event)"
-                (beforeChange)="beforeChange($event)">
+                [config]="slideConfig">
                 <div class="product-slider" style="background-color: white !important; border: none;" ngxSlickItem *ngFor="let slide of slidesHotProducts" class="slide">
                     <div class="product-item" >
                         <img src="{{ '../assets/products/' + slide.productImg }}" alt="" width="100%" height="200px">
