--- a/src/app/admin/product/detail-product/detail-product.component.html
+++ b/src/app/admin/product/detail-product/detail-product.component.html
@@ -1,1 +1,107 @@
-<p>detail-product works!</p>
+<div class="main-content">
+
+    <header>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link" data-toggle="dropdown" aria-expanded="true">
+                    <img src="" class="img-circle elevation-1" alt="Image" width="35" height="35px"
+                        style="margin-top:-5px; border-radius: 50%;">
+                    <span>@Session["Admin_Name"]</span>
+                </a>
+
+                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right"
+                    style="min-width: 200px; font-size: 15px; left: inherit; right: 0px;">
+                    <span class="dropdown-item dropdown-header font-weight-bold text-drank d-block">Quản trị viên</span>
+                    <div class="dropdown-divider"></div>
+
+                    <div class="dropdown-divider"></div>
+                    <a routerLink="/Admin/Logout" class="dropdown-item dropdown-footer text-left">
+                        <i class="fas fa-sign-out-alt mr-2"></i>Đăng xuất
+                    </a>
+                </div>
+            </li>
+        </ul>
+    </header>
+
+    <main>
+        <div class="card" *ngIf="detailProduct">
+            <div class="card-header d-flex justify-content-between">
+                <h5 class="h5-title" style="margin: 8px 20px;">Chi tiết san pham</h5>
+                <div class="button" style="margin: 8px 20px;">
+                    <a [routerLink]="['/admin/product/edit', detailProduct.id]" class="btn btn-primary btn-sm mr-2" style="padding: 4px 8px;">
+                        <svg xmlns="http://www.w3.org/2000/svg" style="fill: #fff;" height="1em" viewBox="0 0 512 512">
+                            <path
+                                d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z" />
+                        </svg>
+                        Sửa
+                    </a>
+                    <button class="btn btn-danger btn-sm" style="padding: 4px 8px;" (click)="delTrash(detailProduct.id)">
+                        <svg xmlns="http://www.w3.org/2000/svg" style="fill: #fff;" height="1em" viewBox="0 0 448 512">
+                            <path
+                                d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
+                        </svg>
+                        Xóa
+                    </button>
+                </div>
+            </div>
+            <div class="card-body">
+                <table class="table table-bordered table-striped mt-3">
+                    <tbody>
+                        <tr>
+                            <th>ID</th>
+                            <td>{{detailProduct.id}}</td>
+                        </tr>
+                        <tr>
+                            <th>Name</th>
+                            <td>{{detailProduct.name}}</td>
+                        </tr>
+                        <tr>
+                            <th>Slug</th>
+                            <td>{{detailProduct.slug}}</td>
+                        </tr>
+                        <tr>
+                            <th>CategoryID</th>
+                            <td>{{detailProduct.cateId}}</td>
+                        </tr>
+                        <tr>
+                            <th>Mass</th>
+                            <td>{{detailProduct.mass}}</td>
+                        </tr>
+                        <tr>
+                            <th>Price</th>
+                            <td>{{detailProduct.price}}</td>
+                        </tr>
+                        <tr>
+                            <th>Description</th>
+                            <td>{{detailProduct.description}}</td>
+                        </tr>
+                        <tr>
+                            <th>Detail</th>
+                            <td>{{detailProduct.detail}}</td>
+                        </tr>
+                        <tr>
+                            <th>Image</th>
+                            <td><img src="../../../../assets/admin-img/product/{{detailProduct.image}}" alt="Không có ảnh" style="width: 80px; height: 80px;"></td>
+                        </tr>
+                        <tr>
+                            <th>CreatedAt</th>
+                            <td>{{detailProduct.createdDate}}</td>
+                        </tr>
+                        <tr>
+                            <th>CreatedBy</th>
+                            <td>{{detailProduct.createdBy}}</td>
+                        </tr>
+                        <tr>
+                            <th>UpdatedAt</th>
+                            <td>{{detailProduct.updatedDate}}</td>
+                        </tr>
+                        <tr>
+                            <th>UpdatedBy</th>
+                            <td>{{detailProduct.UpdatedBy}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </main>
+</div>
