--- a/src/app/admin/product/edit-product/edit-product.component.html
+++ b/src/app/admin/product/edit-product/edit-product.component.html
@@ -1,1 +1,120 @@
-<p>edit-product works!</p>
+<div class="main-content">
+        
+    <header>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link" data-toggle="dropdown" aria-expanded="true">
+                    <img src="" class="img-circle elevation-1" alt="Image" width="35" height="35px"
+                        style="margin-top:-5px; border-radius: 50%;">
+                    <span>@Session["Admin_Name"]</span>
+                </a>
+
+                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right"
+                    style="min-width: 200px; font-size: 15px; left: inherit; right: 0px;">
+                    <span class="dropdown-item dropdown-header font-weight-bold text-drank d-block">Quản trị viên</span>
+                    <div class="dropdown-divider"></div>
+
+                    <div class="dropdown-divider"></div>
+                    <a routerLink="/Admin/Logout" class="dropdown-item dropdown-footer text-left">
+                        <i class="fas fa-sign-out-alt mr-2"></i>Đăng xuất
+                    </a>
+                </div>
+            </li>
+        </ul>
+    </header>
+    
+    <main>
+        <div class="card">
+            <div class="card-header d-flex justify-content-between">
+                <h5 class="h5-title" style="margin: 8px 20px;">Cập nhật người dùng</h5>
+                <div class="button" style="margin: 8px 20px;">
+                    <button type="submit" class="btn btn-primary btn-sm mr-2" style="padding: 4px 8px;" (click)="onSubmit()">
+                        <svg xmlns="http://www.w3.org/2000/svg" style="fill: #fff" height="1em" viewBox="0 0 448 512">
+                            <path
+                                d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V173.3c0-17-6.7-33.3-18.7-45.3L352 50.7C340 38.7 323.7 32 306.7 32H64zm0 96c0-17.7 14.3-32 32-32H288c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V128zM224 288a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
+                        </svg>
+                        Lưu
+                    </button>
+                    <a [routerLink]="['/admin/product/index']" class="btn btn-danger btn-sm" style="padding: 4px 8px;">
+                        <svg xmlns="http://www.w3.org/2000/svg" style="fill: #fff;" height="1em" viewBox="0 0 512 512">
+                            <path
+                                d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z" />
+                        </svg>
+                        Thoát
+                    </a>
+                </div>
+            </div>
+            <div class="card-body"> 
+                <form action="" method="" class="w-100" [formGroup]="editProduct">
+                    <div class="row">
+                        <div class="col-md-8 mr-4">
+                            <div class="mb-3">
+                                <input name="" id="userId" formControlName="Id" class="form-control" type="hidden"/>
+                            </div>
+                            <div class="mb-3">
+                                <label for="" class="mb-2 font-weight-bold">Ten san pham</label>
+                                <input name="" class="form-control" type="text" formControlName="Name"/>
+                                <div *ngIf="submited && f.Name.errors">
+                                    <small *ngIf="f.Name.errors['required']" style="color: red;">Vui lòng nhập ten san pham</small>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="" class="mb-2 font-weight-bold">So luong</label>
+                                <input name="" class="form-control" type="text" formControlName="Mass"/>
+                                <div *ngIf="submited && f.Mass.errors">
+                                    <small *ngIf="f.Mass.errors['required']" style="color: red;">Vui lòng nhập so luong</small>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="" class="mb-2 font-weight-bold">Gia</label>
+                                <input name="" class="form-control" type="text" formControlName="Price"/>
+                                <div *ngIf="submited && f.Price.errors">
+                                    <small *ngIf="f.Price.errors['required']" style="color: red;">Vui lòng nhập gia</small>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="" class="mb-2 font-weight-bold">Mo ta</label>
+                                <input name="" class="form-control" type="text" formControlName="Description"/>
+                            </div>
+                            <div class="mb-3">
+                                <label for="" class="mb-2 font-weight-bold">Chi tiet</label>
+                                <input name="" class="form-control" type="text" formControlName="Detail"/>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="mb-3">
+                                <label class="mb-2 font-weight-bold" for="">Ảnh san pham</label>
+                                <div class="">
+                                    <input class="control-label" id="" name="" type="file" (change)="onChange($event)" accept="image/*">
+                                    <span class="field-validation-valid text-danger" data-valmsg-for="Image" data-valmsg-replace="true"></span>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="" class="mb-2 font-weight-bold">Danh muc</label>
+                                <select name="" class="form-control" formControlName="CateId">
+                                    <option value="">Chọn danh muc</option>
+                                    <option *ngFor="let category of listCategory" value="{{ category.id }}">{{ category.name }}</option>
+                                </select>
+                                <div *ngIf="submited && f.CateId.errors">
+                                    <small *ngIf="f.CateId.errors['required']" style="color: red;">Vui lòng chon danh muc</small>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="" class="mb-2 font-weight-bold">Trạng thái</label>
+                                <select name="" class="form-control" formControlName="IsActive">
+                                    <option value="">Chọn trạng thái</option>
+                                    <option value="1">Hoạt động</option>
+                                    <option value="0">Tạm khóa</option>
+                                </select>
+                                <div *ngIf="submited && f.IsActive.errors">
+                                    <small *ngIf="f.IsActive.errors['required']" style="color: red;">Vui lòng chọn trạng thái</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+               </form>
+            </div>
+        </div>
+    </main>
+    
+</div>
